--- a/asstes/css/style-shared.css
+++ b/asstes/css/style-shared.css
@@ -34,7 +34,9 @@ Version:	1.0
 	padding: 0;
 	box-sizing: border-box;
 }
+svg{cursor:pointer !important;}
 a {text-decoration: none;}
+audio{display: none}
 ul{
 	margin: 0 !important;
 	list-style: none!important;
@@ -253,7 +255,7 @@ button{
 	max-width: 500px;
 	padding-left: 15px;
 	padding-right: 15px;
-	color: var(--darkMode);
+	color: var(--darkMode)!important;
 	background: none;
 	outline: none;
 	border: none;
@@ -292,13 +294,14 @@ aside{
 	position: fixed;
 	top: 0;
 	right: 0;
-	width: 400px;
+	width: 0px;
 	max-width: 100%;
 	height: 100%;
 	overflow-y: auto !important;
 	backdrop-filter: blur(10px);
 	background: var(--aside);
 	z-index: 300;
+	transition: width 1s ease;
 }
 aside .head{
 	padding: 20px;
@@ -349,6 +352,42 @@ aside .dropMovie, .dropSeries{
 aside a{color: var(--darkMode);}
 /*==============================
 	End Navbar
+==============================*/
+
+/*==============================
+	section View Trailer
+==============================*/
+#bubbleTrailer {
+	position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    display: none;
+    background: hsl(0deg 0% 0% / 64%);
+    z-index: 10000000;
+    justify-content: center;
+    align-items: center;
+
+}
+.sectionTrailer{
+    border: 1px solid #eeeeee38;
+    border-radius: 10px;
+    background: #09021ed3;
+    backdrop-filter: blur(15px);
+    height: 100%;
+    width: 550px;
+    min-width: 300px;
+    padding: 10px;
+}
+iframe{
+	width: 100%;
+	max-height: 300px;
+	border-radius:15px 15px 0  0 ;
+}
+/*==============================
+	End
 ==============================*/
 
 
@@ -602,3 +641,14 @@ border-top: 3px solid #fcfaff;
 /*==============================
 	End Loading
 ==============================*/
+@media (max-width: 450px) {
+	/* search */
+	#sectionSearch form input{
+		min-width: auto;
+		max-width: auto;
+		width: 90%;
+	}
+	#sectionSearch form{
+		margin: auto 20px;
+	}
+}
