--- a/asstes/css/style-shared.css
+++ b/asstes/css/style-shared.css
@@ -1,4 +1,4 @@
-☺/*----------------------------------------
+/*----------------------------------------
 
 Project:	Blur.TV HTML Template
 Version:	1.0
@@ -25,9 +25,6 @@ Version:	1.0
 /*==============================
 	Common styles
 ==============================*/
-
-
-
 
 *{
 	margin: 0;
@@ -107,7 +104,21 @@ html,body{
 	transition: all .5s ease;
 	font-weight: normal;	
 }
-
+/* Custom Scroll */
+::-webkit-scrollbar {
+	width: 5px;
+	z-index:2000000
+  }
+::-webkit-scrollbar-track {
+	background: #f1f1f15c;
+	z-index:2000000
+}
+::-webkit-scrollbar-thumb {
+	background: #130e43d8;
+	border-radius: 50px;
+	min-height:350px;
+	z-index:2000000
+}
 
 /*==============================
 Navbar
@@ -132,11 +143,10 @@ nav .container-custom{
 	font-family: sans-serif;
 	font-size: 30px;
 	font-weight: bolder;
-	display: inline-block;
-	color: var(--darkMode);
+	color: var(--darkMode)!important;
 }
 .logo span{
-	color: var(--yellow);
+	color: var(--yellow)!important;
 }
 /*...... End logo .......*/
 
@@ -302,6 +312,16 @@ aside{
 	background: var(--aside);
 	z-index: 300;
 	transition: width 1s ease;
+}
+/* Custom Scroll */
+aside::-webkit-scrollbar {
+	width: 0px;
+  }
+aside::-webkit-scrollbar-track {
+	background: #f1f1f15c;
+}
+aside::-webkit-scrollbar-thumb {
+	height:0px;
 }
 aside .head{
 	padding: 20px;
