--- a/asstes/css/style-room.css
+++ b/asstes/css/style-room.css
@@ -1,7 +1,7 @@
-☺/*----------------------------------------
-
+/*----------------------------------------
 Project:	Blur.TV HTML Template
-Version:	1.0
+
+Devloper:	Hady Rabie - Mohamed Salah
 ----------------------------------------*/
 /*----------------------------------------
 [Table of contents]
