--- a/admin/css/admin.css
+++ b/admin/css/admin.css
@@ -1,12 +1,10 @@
 /*----------------------------------------
-[Master Stylesheet]
 
-Project:	HotFlix
-Version:	2.1
-Primary use:	HotFlix Admin Template
+Project:	Blur.TV
+
+Devloper:	Hady Rabie - Mohamed Salah
 ----------------------------------------*/
 /*----------------------------------------
-[Table of contents]
 
 1. Fonts
 2. Theme Dark & light
@@ -16,15 +14,13 @@ Primary use:	HotFlix Admin Template
 6. Filter
 7. Paginator
 8. Form
-9. Profile
-10. Comments
-11. Reviews
-12. Sign
-13. Page 404
-14. Modal
-15. select2 customization
-16. mCustomScrollbar customization
-17. Loading
+9. Comments
+10. Reviews
+11. Page 404
+12. Modal
+13. select2 customization
+14. mCustomScrollbar customization
+15. Loading
 
 ----------------------------------------*/
 /*==============================
@@ -351,15 +347,6 @@ ul {
   transition: transform 0.9s ease;
   border-right: 1px solid var(--blue);
 }
-/* .sidebar:hover{
-  position: fixed;
-  bottom: 0;
-  top: 0;
-  left: -25px;
-  transform: translateX(-10%);
-  width: 75px;
-  transition: transform 0.9s ease;
-} */
 .sidebar__logo {
   display: flex;
   flex-direction: row;
@@ -1517,303 +1504,7 @@ ul {
     max-width: 100%;
   }
 }
-/*==============================
-	Profile
-==============================*/
-.profile__content {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
-  padding: 20px;
-  background-color: var(--blue);
-  margin-bottom: 20px;
-  position: relative;
-  border-radius: 6px;
-}
-.profile__user {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: center;
-  margin-bottom: 10px;
-}
-.profile__meta {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  height: 40px;
-}
-.profile__meta h3 {
-  color: var(--darkMode);
-  display: block;
-  font-size: 16px;
-  font-weight: 600;
-  margin-bottom: 0;
-  line-height: 20px;
-}
-.profile__meta span {
-  color: var(--title);
-  font-size: 14px;
-  line-height: 20px;
-}
-.profile__meta--green h3 span {
-  color: #29b474;
-}
-.profile__meta--red h3 span {
-  color: #eb5757;
-}
-.profile__avatar {
-  display: block;
-  position: relative;
-  width: 40px;
-  cursor: pointer;
-  overflow: hidden;
-  border-radius: 6px;
-  margin-right: 15px;
-  border: 1px solid rgba(255,255,255,0.1);
-}
-.profile__avatar img {
-  width: 100%;
-}
-.profile__tabs {
-  display: none;
-}
-.profile__mobile-tabs {
-  position: relative;
-  margin-bottom: -10px;
-}
-.profile__mobile-tabs-btn {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: center;
-  cursor: pointer;
-  height: 30px;
-  transition: 0.4s ease;
-}
-.profile__mobile-tabs-btn input {
-  display: block;
-  position: relative;
-  width: auto;
-  background-color: transparent;
-  border: none;
-  font-size: 16px;
-  color: var(--darkMode);
-  cursor: pointer;
-  height: 30px;
-  margin-right: 10px;
-}
-.profile__mobile-tabs-btn span {
-  position: relative;
-  width: 16px;
-  height: 16px;
-  display: block;
-  margin-top: 3px;
-}
-.profile__mobile-tabs-btn span:before,
-.profile__mobile-tabs-btn span:after {
-  content: '';
-  position: absolute;
-  display: block;
-  width: 16px;
-  height: 2px;
-  background-color: var(--darkMode);
-  left: 0;
-  top: 50%;
-  transition: 0.4s ease;
-  margin-top: -5px;
-  border-radius: 2px;
-}
-.profile__mobile-tabs-btn span:after {
-  margin-top: 2px;
-  width: 10px;
-}
-.profile__mobile-tabs-btn[aria-expanded="true"] span:before {
-  transform: rotate(45deg);
-  margin-top: -2px;
-  background-color: var(--yellow-blue);
-}
-.profile__mobile-tabs-btn[aria-expanded="true"] span:after {
-  margin-top: -2px;
-  width: 16px;
-  transform: rotate(-45deg);
-  background-color: var(--yellow-blue);
-}
-.profile__mobile-tabs-btn:hover span:before,
-.profile__mobile-tabs-btn:hover span:after {
-  background-color: var(--yellow-blue);
-}
-.profile__mobile-tabs-menu {
-  top: 100%;
-  left: 0;
-  margin-top: -10px;
-  min-width: 200px;
-  padding: 20px;
-  background-color: var(--blue);
-  display: block;
-  transition: 0.4s ease;
-  position: absolute;
-  z-index: 100;
-  pointer-events: none;
-  opacity: 0;
-  border-radius: 6px;
-}
-.profile__mobile-tabs-menu li a {
-  margin-bottom: 15px;
-}
-.profile__mobile-tabs-menu li:last-child a {
-  margin-bottom: 0;
-}
-.profile__mobile-tabs-menu a {
-  display: block;
-  font-size: 14px;
-  color: var(--darkMode);
-  position: relative;
-  width: 100%;
-}
-.profile__mobile-tabs-menu a:hover {
-  color: var(--yellow-blue);
-}
-.profile__mobile-tabs-menu a.active {
-  display: none;
-}
-.profile__mobile-tabs-menu.show {
-  pointer-events: auto;
-  opacity: 1;
-  margin-top: 0;
-}
-.profile__actions {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: center;
-  position: absolute;
-  top: 20px;
-  right: 20px;
-}
-.profile__action {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  width: 30px;
-  height: 30px;
-  font-size: 16px;
-  color: var(--darkMode);
-  border-radius: 6px;
-  background-color: rgba(255,255,255,0.05);
-  margin-right: 10px;
-}
-.profile__action:last-child {
-  margin-right: 0;
-}
-.profile__action--delete {
-  background-color: rgba(235,87,87,0.08);
-  color: #eb5757;
-}
-.profile__action--delete:hover {
-  color: #eb5757;
-  background-color: rgba(235,87,87,0.2);
-}
-.profile__action--banned {
-  background-color: rgba(41,180,116,0.08);
-  color: #29b474;
-}
-.profile__action--banned:hover {
-  color: #29b474;
-  background-color: rgba(41,180,116,0.2);
-}
-@media (min-width: 768px) {
-  .profile__content {
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-    padding: 0 20px;
-    height: 80px;
-    margin-bottom: 30px;
-  }
-  .profile__user {
-    width: auto;
-    margin-bottom: 0;
-    margin-right: 40px;
-  }
-  .profile__tabs {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-    overflow: hidden;
-  }
-  .profile__tabs li {
-    margin-right: 40px;
-  }
-  .profile__tabs li:last-child {
-    margin-right: 0;
-  }
-  .profile__tabs a {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-    height: 80px;
-    color: var(--darkMode);
-    position: relative;
-    text-transform: uppercase;
-    font-size: 14px;
-  }
-  .profile__tabs a:hover {
-    color: var(--yellow-blue);
-  }
-  .profile__tabs a:before {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 2px;
-    display: block;
-    background-color: var(--yellow-blue);
-    transition: 0.4s ease;
-    transform: translateY(2px);
-    opacity: 0;
-    border-radius: 2px 2px 0 0;
-  }
-  .profile__tabs a.active {
-    color: var(--yellow-blue);
-  }
-  .profile__tabs a.active:before {
-    opacity: 1;
-    transform: translateY(0);
-  }
-  .profile__mobile-tabs {
-    display: none;
-  }
-  .profile__actions {
-    position: relative;
-    top: auto;
-    right: auto;
-    margin-left: auto;
-  }
-  .profile__action {
-    margin-right: 15px;
-  }
-  .profile__action:last-child {
-    margin-right: 0;
-  }
-}
-@media (min-width: 1200px) {
-  .profile__tabs li {
-    margin-right: 45px;
-  }
-  .profile__tabs li:last-child {
-    margin-right: 0;
-  }
-  .profile__user {
-    margin-right: 60px;
-  }
-}
+
 /*==============================
 	Comments
 ==============================*/
@@ -2009,253 +1700,7 @@ ul {
   margin-right: 6px;
   color: var(--yellow-blue);
 }
-/*==============================
-	Sign
-==============================*/
-.sign {
-  display: block;
-  position: relative;
-}
-.sign__content {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  min-height: 100vh;
-  padding: 40px 0;
-}
-.sign__form {
-  background-color: var(--blue);
-  border: 1px solid var(--blue);
-  border-radius: 6px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 40px 20px;
-  position: relative;
-  width: 100%;
-  max-width: 400px;
-}
-.sign__logo {
-  display: block;
-  margin-bottom: 40px;
-}
-.sign__logo a {
-  max-width: 100%;
-  width: auto;
-}
-.sign__logo img {
-  width: 140px;
-}
-.sign__input {
-  width: 100%;
-  background-color: var(--blue);
-  border: 2px solid transparent;
-  height: 46px;
-  position: relative;
-  color: var(--darkMode);
-  font-size: 16px;
-  width: 100%;
-  color: var(--darkMode);
-  border-radius: 6px;
-  padding: 0 20px;
-}
-.sign__input:focus {
-  border-color: var(--yellow-blue);
-}
-.sign__textarea {
-  border: 2px solid transparent;
-  height: 150px;
-  position: relative;
-  color: var(--darkMode);
-  font-size: 16px;
-  width: 100%;
-  padding: 15px 20px;
-  resize: none;
-  background-color: var(--blue);
-  border-radius: 6px;
-}
-.sign__textarea:focus {
-  border-color: var(--yellow-blue);
-}
-.sign__group {
-  position: relative;
-  margin-bottom: 20px;
-  width: 100%;
-}
-.sign__group--checkbox {
-  width: 100%;
-  text-align: left;
-}
-.sign__group--checkbox input:not(:checked),
-.sign__group--checkbox input:checked {
-  position: absolute;
-  left: -9999px;
-}
-.sign__group--checkbox input:not(:checked) + label,
-.sign__group--checkbox input:checked + label {
-  font-size: 14px;
-  color: var(--darkMode);
-  font-weight: normal;
-  position: relative;
-  cursor: pointer;
-  padding-left: 37px;
-  line-height: 22px;
-  margin: 0;
-}
-.sign__group--checkbox input:not(:checked) + label a,
-.sign__group--checkbox input:checked + label a {
-  color: var(--yellow-blue);
-}
-.sign__group--checkbox input:not(:checked) + label a:hover,
-.sign__group--checkbox input:checked + label a:hover {
-  color: var(--yellow-blue);
-  text-decoration: underline;
-}
-.sign__group--checkbox input:not(:checked) + label:before,
-.sign__group--checkbox input:checked + label:before {
-  content: '';
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 22px;
-  height: 22px;
-  background-color: var(--blue);
-  border-radius: 6px;
-}
-.sign__group--checkbox input:not(:checked) + label:after,
-.sign__group--checkbox input:checked + label:after {
-  font-family: 'Ionicons';
-  content: '\f3ff';
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 22px;
-  height: 22px;
-  font-size: 24px;
-  line-height: 22px;
-  text-align: center;
-  transition: 0.4s;
-  color: var(--yellow-blue);
-}
-.sign__group--checkbox input:not(:checked) + label:after {
-  opacity: 0;
-  transform: scale(0);
-}
-.sign__group--checkbox input:checked + label:after {
-  opacity: 1;
-  transform: scale(1);
-}
-.sign__group--checkbox label::-moz-selection {
-  background: transparent;
-  color: var(--darkMode);
-}
-.sign__group--checkbox label::selection {
-  background: transparent;
-  color: var(--darkMode);
-}
-.sign__btn {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  height: 46px;
-  width: 100%;
-  border-radius: 6px;
-  background-color: transparent;
-  font-size: 14px;
-  color: var(--darkMode);
-  text-transform: uppercase;
-  border: 2px solid var(--yellow-blue);
-  margin-top: 15px;
-  margin-bottom: 15px;
-}
-.sign__btn:hover {
-  color: var(--darkMode);
-  background-color: rgba(249,171,0,0.05);
-}
-.sign__text {
-  margin-top: 15px;
-  font-size: 14px;
-  color: var(--darkMode);
-}
-.sign__text a {
-  position: relative;
-  color: var(--yellow-blue);
-}
-.sign__text a:hover {
-  color: var(--yellow-blue);
-  text-decoration: underline;
-}
-.sign__delimiter {
-  font-size: 14px;
-  color: var(--darkMode);
-  line-height: 100%;
-}
-.sign__social {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  margin-bottom: 15px;
-  margin-top: 15px;
-}
-.sign__social a {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  height: 44px;
-  width: calc(33% - 10px);
-  border-radius: 6px;
-  color: var(--darkMode);
-}
-.sign__social a svg {
-  height: auto;
-  fill: var(--darkMode);
-  transition: 0.4s;
-}
-.sign__social a.fb {
-  background-color: #3b5999;
-}
-.sign__social a.fb svg {
-  width: 10px;
-}
-.sign__social a.gl {
-  background-color: #df4a32;
-}
-.sign__social a.gl svg {
-  width: 18px;
-}
-.sign__social a.tw {
-  background-color: #1da1f2;
-}
-.sign__social a.tw svg {
-  width: 18px;
-}
-.sign__social a:hover {
-  background-color: var(--darkMode);
-}
-.sign__social a:hover.fb svg {
-  fill: #3b5999;
-}
-.sign__social a:hover.gl svg {
-  fill: #df4a32;
-}
-.sign__social a:hover.tw svg {
-  fill: #1da1f2;
-}
-@media (min-width: 576px) {
-  .sign__form {
-    padding: 50px 60px;
-  }
-  .sign__logo {
-    margin-bottom: 50px;
-  }
-}
+
 /*==============================
 	Page 404
 ==============================*/
