--- a/asstes/css/style-home.css
+++ b/asstes/css/style-home.css
@@ -1,7 +1,7 @@
 /*----------------------------------------
-
 Project:	Blur.TV HTML Template
-Version:	1.0
+
+Devloper:	Hady Rabie - Mohamed Salah
 ----------------------------------------*/
 /*----------------------------------------
 [Table of contents]
@@ -10,6 +10,7 @@ Version:	1.0
 2. Header carousel 3D
 3. Fast Details
 4. Cards
+5. price
 6. Responsive
 
 ----------------------------------------*/
@@ -24,7 +25,7 @@ Theme Dark & light
 	--red: #0051ff;
 	--blue: #eeeeee;
 	--mov: #4b4b4f;
-	--blue2: #EEE;
+	--blue2: #ffffff;
 	--blue3: #0051ff;
 	--blue4: #dadada;
 	--aside: #ffffff;
@@ -618,6 +619,122 @@ main h3 {
 	End Cards
 ==============================*/
 
+
+/*==============================
+	price
+==============================*/
+.pricing{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 2rem;
+}
+.card-wrapper{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 320px;
+    height: auto;
+    background-color: var(--blue2);
+	color: var(--darkMode);
+    border-radius: 20px;
+    box-shadow:  0 5px 14px rgba(0, 0, 0, 0.25),                            rgba(0, 0, 0, 0.22);
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+    padding: 2rem;
+    margin: 1rem;
+    transform: all 0.2s ease-in;
+    -webkit-transform: all 0.2s ease-in;
+    -moz-transform: all 0.2s ease-in;
+    -ms-transform: all 0.2s ease-in;
+    -o-transform: all 0.2s ease-in;
+    transition: all 0.2s ease-in;
+    -webkit-transition: all 0.2s ease-in;
+    -moz-transition: all 0.2s ease-in;
+    -ms-transition: all 0.2s ease-in;
+    -o-transition: all 0.2s ease-in;
+	box-shadow: 3px 7px 10px rgb(0 0 0 / 35%);
+}
+.card-wrapper:hover{
+	color: var(--darkMode);
+    transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    -o-transform: scale(1.1);
+}
+
+.card-wrapper:hover .card-header > h2{
+    transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    -o-transform: scale(1.1);
+    color: #5222d0;
+    letter-spacing: 2;
+}
+.card-header{
+    margin-top: 1rem;
+    text-align: center;
+}
+.card-price{
+	display: flex;
+    align-items: center;
+    flex-direction: column;
+	margin-bottom: 2em;
+}
+.card-price > h2{
+    font-size: 3rem;
+    font-weight: 800;
+}
+.card-price > span  {
+	font-size: 1rem;
+}
+.card-detail{
+    width: 100%;
+}
+.card-detail p{
+    padding: 0.6rem 1.5rem;
+    font-size: 0.8rem;
+    border-bottom: 1px solid var(--cyan);
+}
+.check{
+    color: #5222d0;
+}
+.nocheck{
+    color: #ec615b;
+}
+.card-button{
+	border: 2px solid #5222d0;
+	background-color: #5222d0;
+	color:#fff;
+	border-radius: 30px;
+	cursor: pointer;
+    padding: 10px 40px;
+    margin-top: 2em;
+	transition: all 50ms ease-in ;
+	-webkit-border-radius: 30px;
+	-moz-border-radius: 30px;
+	-ms-border-radius: 30px;
+	-o-border-radius: 30px;
+	-webkit-transition: all 50ms ease-in ;
+	-moz-transition: all 50ms ease-in ;
+	-ms-transition: all 50ms ease-in ;
+	-o-transition: all 50ms ease-in ;
+}
+.card-button:hover{
+    border: 2px solid #ec615b;
+    background-color: transparent;
+    color: #ec615b;
+    font-weight: 800;
+}
+
+/*==============================
+	price
+==============================*/
 
 /*==============================
 	Responsive
