--- a/asstes/css/style-section.css
+++ b/asstes/css/style-section.css
@@ -1,7 +1,7 @@
 /*----------------------------------------
-
 Project:	Blur.TV HTML Template
-Version:	1.0
+
+Devloper:	Hady Rabie - Mohamed Salah
 ----------------------------------------*/
 /*----------------------------------------
 [Table of contents]
